# mod-version-check

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  compose.yaml
.github/workflows/: docker-image.yml
backend/: pyproject.toml
backend/app/: auth.py  config.py  db.py  main.py  models.py  scheduler.py
backend/app/providers/: __init__.py  base.py  modrinth.py  schemas.py
backend/app/repositories/: mod_repository.py  mod_version_repository.py  profile_repository.py  sync_status_repository.py
backend/app/routers/: mods.py  profiles.py  search.py  sync.py
backend/app/routers/schemas/: __init__.py
backend/app/services/: matrix_service.py  mod_service.py  profile_service.py  search_service.py  sync_service.py
docs/: curseforge-api.md  modrinth-api.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  CreateProfileModal.tsx  DownloadModsModal.tsx  ModSearchModal.tsx  ProfileCard.tsx  ProtectedRoute.tsx  SyncStatusBadge.tsx  VersionCell.tsx  VersionMatrix.tsx  app-header.tsx  app-sidebar.tsx  theme-provider.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/api/: auth.ts  mods.ts  profiles.ts  search.ts  sync.ts
frontend/src/hooks/mutations/: useMods.ts  useProfiles.ts  useSync.ts
frontend/src/hooks/queries/: useMods.ts  useProfiles.ts  useSearch.ts  (+1 more)
frontend/src/lib/: api.ts  download-service.ts  query-keys.ts
frontend/src/pages/: Home.tsx  Login.tsx  ProfileDetail.tsx  Settings.tsx
frontend/src/types/: index.ts
(+3 files in other folders)
